# chat

./: .gitignore  CMakeLists.txt
doc/: chat.sql  test.txt  新建 文本文档.txt
include/: Common.h
include/server/: ChatServer.h  ChatService.h  Group.h  User.h  UserModel.h
include/server/db/: Redis.h  RedisConnPool.h  db.h
include/server/model/: FriendModel.h  Group.h  GroupModel.h  GroupUser.h  OfflineMsgModel.h  User.h  UserModel.h
src/client/: CMakeLists.txt  main.cc
src/server/: CMakeLists.txt  ChatServer.cpp  ChatService.cpp  FriendModel.cpp  UserModel.cpp  main.cc
src/server/db/: Redis.cpp  RedisConnPool.cpp  db.cpp
src/server/model/: FriendModel.cpp  GroupModel.cpp  OfflineMsgModel.cpp  UserModel.cpp
test/: CMakeLists.txt  a.out  test.cc
varifyServer/: config.js  config.json  const.js  email.js  index.js  message.proto  package-lock.json  package.json  proto.js  redis.js  testClient.js
